--- a/css/style.css
+++ b/css/style.css
@@ -206,11 +206,7 @@ body {
   text-decoration: none;
 }
 
-.main {
-  width: 100%;
-}
-
-.main .header {
+.header {
   margin: 12px 0 0 0;
   padding: 0 0 12px 0;
   display: -webkit-box;
@@ -224,7 +220,7 @@ body {
   border-bottom: 1px solid rgba(77, 77, 77, 0.2);
 }
 
-.main .header .form .search {
+.header .form .search {
   width: 475px;
   height: 32px;
   border: 1px solid #CDCDCD;
@@ -238,7 +234,7 @@ body {
       justify-content: space-around;
 }
 
-.main .header .form .search .select {
+.header .form .search .select {
   width: 157px;
   height: 32px;
   display: -webkit-box;
@@ -257,11 +253,11 @@ body {
   font-family: Circe-Regular, sans-serif;
 }
 
-.main .header .form .search .select:focus, .main .header .form .search .select:active {
+.header .form .search .select:focus, .header .form .search .select:active {
   outline: none;
 }
 
-.main .header .form .search #search {
+.header .form .search #search {
   width: 268px;
   border: none;
   color: #4d4d4d;
@@ -273,37 +269,27 @@ body {
   border-left: 1px solid #cdcdcd;
 }
 
-.main .header .form .search #search:focus, .main .header .form .search #search:active {
+.header .form .search #search:focus, .header .form .search #search:active {
   outline: none;
 }
 
-.main .header .form .search #search::after {
-  content: url(../img/loop.svg);
-  display: block;
-  width: 12px;
-  height: 12px;
-  position: absolute;
-  top: 50px;
-  right: 0;
-}
-
-.main .header .form .search label[for="search"] {
+.header .form .search label[for="search"] {
   padding-right: 9px;
 }
 
-.main .header .text {
+.header .text {
   color: #4d4d4d;
   line-height: 12px;
   font-size: 12px;
   font-family: Circe-Regular, sans-serif;
 }
 
-.main .header .text b {
+.header .text b {
   color: black;
   font-family: Circe-Bold;
 }
 
-.main .header .social {
+.header .social {
   width: 123px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -316,7 +302,7 @@ body {
           justify-content: space-between;
 }
 
-.main .header .social .bin, .main .header .social .bell, .main .header .social .profile {
+.header .social .bin, .header .social .bell, .header .social .profile {
   display: block;
   border: none;
   background-color: #f5f5f5;
@@ -324,7 +310,7 @@ body {
   position: relative;
 }
 
-.main .header .social .bin output, .main .header .social .bell output, .main .header .social .profile output {
+.header .social .bin output, .header .social .bell output, .header .social .profile output {
   color: white;
   line-height: 0px;
   font-size: 6px;
@@ -337,21 +323,25 @@ body {
   right: 0;
 }
 
-.main .header .social .bin-img, .main .header .social .bell-img, .main .header .social .profile-img {
+.header .social .bin-img, .header .social .bell-img, .header .social .profile-img {
   padding: 8px;
 }
 
-.main .header .social .bin:hover, .main .header .social .bell:hover, .main .header .social .profile:hover {
+.header .social .bin:hover, .header .social .bell:hover, .header .social .profile:hover {
   cursor: pointer;
   background-color: #E9F0F7;
 }
 
-.main .header .social .bin:focus, .main .header .social .bin:active, .main .header .social .bell:focus, .main .header .social .bell:active, .main .header .social .profile:focus, .main .header .social .profile:active {
+.header .social .bin:focus, .header .social .bin:active, .header .social .bell:focus, .header .social .bell:active, .header .social .profile:focus, .header .social .profile:active {
   outline: none;
 }
 
-.main .header .social .bell {
+.header .social .bell {
   margin: 0 9px;
+}
+
+footer {
+  width: 100%;
 }
 
 @media (min-width: 1901px) {
@@ -362,26 +352,22 @@ body {
 }
 
 @media (max-width: 950px) {
-  .main .header .text {
+  .header .text {
     display: none;
   }
 }
 
 @media (max-width: 768px) {
-  .main .header .form .search {
-    width: 345px;
-  }
-  .main .header .form .search .select {
+  .header .form .search .select {
     width: 20.4%;
-  }
-  .main .header .form .search #search {
-    width: 18%;
   }
 }
 
 @media (max-width: 425px) {
   body {
     overflow-x: hidden;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
   }
   .nav {
     width: 132px;
@@ -393,7 +379,7 @@ body {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    padding: 0 33% 0 15px;
+    padding: 0 64% 0 15px;
     border-bottom: 1px solid rgba(77, 77, 77, 0.2);
   }
   .nav .catalog-open {
@@ -455,44 +441,18 @@ body {
   .nav .catalog .list-item-link output {
     left: 90px;
   }
-  .main {
-    width: 100%;
-  }
-  .main .header {
+  .header {
     display: block;
-    width: 100%;
+    width: 34.21%;
+    border: none;
+    position: absolute;
+    top: 0px;
+    right: 0;
   }
-  .main .header .form {
+  .header .form {
     display: none;
   }
-}
-
-@media (max-width: 400px) {
-  .nav {
-    padding-right: 20%;
-  }
-}
-
-@media (max-width: 393px) {
-  .nav {
-    padding-right: 25%;
-  }
-}
-
-@media (max-width: 357px) {
-  .nav {
-    padding-right: 20%;
-  }
-}
-
-@media (max-width: 330px) {
-  .nav {
-    padding-right: 15%;
-  }
-}
-
-@media (max-width: 320px) {
-  .nav {
-    padding-right: 10%;
+  .main {
+    width: 100%;
   }
 }
