--- a/css/style.css
+++ b/css/style.css
@@ -206,7 +206,11 @@ body {
   text-decoration: none;
 }
 
-.header {
+.container {
+  width: 100%;
+}
+
+.container .header {
   margin: 12px 0 0 0;
   padding: 0 0 12px 0;
   display: -webkit-box;
@@ -220,7 +224,16 @@ body {
   border-bottom: 1px solid rgba(77, 77, 77, 0.2);
 }
 
-.header .form .search {
+.container .header .form .input {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.container .header .form .search {
   width: 475px;
   height: 32px;
   border: 1px solid #CDCDCD;
@@ -234,7 +247,7 @@ body {
       justify-content: space-around;
 }
 
-.header .form .search .select {
+.container .header .form .search .select {
   width: 157px;
   height: 32px;
   display: -webkit-box;
@@ -253,11 +266,11 @@ body {
   font-family: Circe-Regular, sans-serif;
 }
 
-.header .form .search .select:focus, .header .form .search .select:active {
+.container .header .form .search .select:focus, .container .header .form .search .select:active {
   outline: none;
 }
 
-.header .form .search #search {
+.container .header .form .search #search {
   width: 268px;
   border: none;
   color: #4d4d4d;
@@ -269,27 +282,28 @@ body {
   border-left: 1px solid #cdcdcd;
 }
 
-.header .form .search #search:focus, .header .form .search #search:active {
+.container .header .form .search #search:focus, .container .header .form .search #search:active {
   outline: none;
 }
 
-.header .form .search label[for="search"] {
+.container .header .form .search label[for="search"] {
   padding-right: 9px;
 }
 
-.header .text {
+.container .header .text {
+  width: 186px;
   color: #4d4d4d;
   line-height: 12px;
   font-size: 12px;
   font-family: Circe-Regular, sans-serif;
 }
 
-.header .text b {
+.container .header .text b {
   color: black;
   font-family: Circe-Bold;
 }
 
-.header .social {
+.container .header .social {
   width: 123px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -302,7 +316,7 @@ body {
           justify-content: space-between;
 }
 
-.header .social .bin, .header .social .bell, .header .social .profile {
+.container .header .social .bin, .container .header .social .bell, .container .header .social .profile {
   display: block;
   border: none;
   background-color: #f5f5f5;
@@ -310,7 +324,7 @@ body {
   position: relative;
 }
 
-.header .social .bin output, .header .social .bell output, .header .social .profile output {
+.container .header .social .bin output, .container .header .social .bell output, .container .header .social .profile output {
   color: white;
   line-height: 0px;
   font-size: 6px;
@@ -323,25 +337,77 @@ body {
   right: 0;
 }
 
-.header .social .bin-img, .header .social .bell-img, .header .social .profile-img {
+.container .header .social .bin-img, .container .header .social .bell-img, .container .header .social .profile-img {
   padding: 8px;
 }
 
-.header .social .bin:hover, .header .social .bell:hover, .header .social .profile:hover {
+.container .header .social .bin:hover, .container .header .social .bell:hover, .container .header .social .profile:hover {
   cursor: pointer;
   background-color: #E9F0F7;
 }
 
-.header .social .bin:focus, .header .social .bin:active, .header .social .bell:focus, .header .social .bell:active, .header .social .profile:focus, .header .social .profile:active {
+.container .header .social .bin:focus, .container .header .social .bin:active, .container .header .social .bell:focus, .container .header .social .bell:active, .container .header .social .profile:focus, .container .header .social .profile:active {
   outline: none;
 }
 
-.header .social .bell {
+.container .header .social .bell {
   margin: 0 9px;
 }
 
-footer {
-  width: 100%;
+.container .main .bread-crumbs {
+  margin: 21px 0 0 20px;
+}
+
+.container .main .bread-crumbs .list {
+  padding: 0;
+  list-style-type: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.container .main .bread-crumbs .list .item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 0 10px 0 0;
+}
+
+.container .main .bread-crumbs .list .item::after {
+  content: "/";
+  color: #4d4d4d;
+  margin-left: 10px;
+}
+
+.container .main .bread-crumbs .list .item:last-child::after {
+  display: none;
+}
+
+.container .main .bread-crumbs .list .item:last-child {
+  margin-right: 0;
+}
+
+.container .main .bread-crumbs .list .item .link {
+  color: #E0101B;
+  line-height: 120%;
+  font-size: 12px;
+  font-family: Circe-Regular, sans-serif;
+}
+
+.container .main .bread-crumbs .list .item .link:hover {
+  text-decoration: none;
+}
+
+.container .main .bread-crumbs .list .item .link:active {
+  text-decoration: underline;
+}
+
+.container .main .bread-crumbs .list .item .active {
+  color: #4d4d4d;
+  text-decoration: none;
 }
 
 @media (min-width: 1901px) {
@@ -351,9 +417,43 @@ footer {
   }
 }
 
-@media (max-width: 950px) {
-  .header .text {
-    display: none;
+@media (max-width: 965px) {
+  .container .header {
+    padding: 0 3%;
+    margin-left: auto;
+    margin-right: auto;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .container .header .form {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+  }
+  .container .header .social {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+  }
+  .container .header .text {
+    width: 296px;
+    -webkit-box-ordinal-group: 4;
+        -ms-flex-order: 3;
+            order: 3;
+    margin-top: 10px;
+    margin-bottom: 7px;
+  }
+}
+
+@media (max-width: 785px) {
+  .container .header .form .search {
+    width: 407px;
+  }
+  .container .header .form .search .input #search {
+    width: 200px;
   }
 }
 
@@ -363,7 +463,28 @@ footer {
   }
 }
 
-@media (max-width: 425px) {
+@media (max-width: 715px) {
+  .container .header .form .search {
+    width: 357px;
+  }
+  .container .header .form .search .input #search {
+    width: 150px;
+  }
+}
+
+@media (max-width: 655px) {
+  .container .header .form .search {
+    width: 307px;
+  }
+  .container .header .form .search .select {
+    width: 137px;
+  }
+  .container .header .form .search .input #search {
+    width: 120px;
+  }
+}
+
+@media (max-width: 600px) {
   body {
     overflow-x: hidden;
     -ms-flex-wrap: wrap;
@@ -379,7 +500,7 @@ footer {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    padding: 0 64% 0 15px;
+    padding: 0 75% 0 15px;
     border-bottom: 1px solid rgba(77, 77, 77, 0.2);
   }
   .nav .catalog-open {
@@ -388,7 +509,7 @@ footer {
   }
   .nav .logo {
     padding: 0;
-    margin: 0;
+    margin: 0 auto;
   }
   .nav .logo-mob-img {
     display: block;
@@ -431,17 +552,134 @@ footer {
   .nav .catalog .line1 {
     width: 98%;
   }
-  .nav .catalog .zakaz-label, .nav .catalog .docum-label, .nav .catalog .study-label, .nav .catalog .market-label, .nav .catalog .info-label, .nav .catalog .profil-label {
-    width: 80%;
+  .nav .catalog .zakaz-label,
+  .nav .catalog .docum-label,
+  .nav .catalog .study-label,
+  .nav .catalog .market-label,
+  .nav .catalog .info-label,
+  .nav .catalog .profil-label {
+    width: 95%;
   }
-  .nav .catalog .zakaz-label .total, .nav .catalog .docum-label .total, .nav .catalog .study-label .total, .nav .catalog .market-label .total, .nav .catalog .info-label .total, .nav .catalog .profil-label .total {
+  .nav .catalog .zakaz-label .total,
+  .nav .catalog .docum-label .total,
+  .nav .catalog .study-label .total,
+  .nav .catalog .market-label .total,
+  .nav .catalog .info-label .total,
+  .nav .catalog .profil-label .total {
     right: 325px;
     top: -5px;
   }
   .nav .catalog .list-item-link output {
     left: 90px;
   }
-  .header {
+  .container .header {
+    display: block;
+    width: 20%;
+    border: none;
+    position: absolute;
+    top: 0px;
+    right: 0;
+  }
+  .container .header .form {
+    display: none;
+  }
+  .container .header .text {
+    display: none;
+  }
+  .container .main {
+    width: 100%;
+  }
+}
+
+@media (max-width: 425px) {
+  body {
+    overflow-x: hidden;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .nav {
+    width: 132px;
+    min-height: 55px;
+    background-color: white;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 0 64% 0 15px;
+    border-bottom: 1px solid rgba(77, 77, 77, 0.2);
+  }
+  .nav .catalog-open {
+    display: block;
+    margin: 0 16px 0 0;
+  }
+  .nav .logo {
+    padding: 0;
+    margin: 0 auto;
+  }
+  .nav .logo-mob-img {
+    display: block;
+    margin: 0 0 3px 0;
+  }
+  .nav .logo-img {
+    display: none;
+  }
+  .nav .logo-text {
+    font-size: 5.6px;
+  }
+  .nav #catalog:checked ~ .catalog {
+    display: block;
+    position: absolute;
+    left: 0;
+  }
+  .nav .catalog {
+    display: none;
+    position: static;
+    top: 0;
+    left: -999999%;
+    background-color: #f5f5f5;
+    width: 100%;
+    min-height: 100vh;
+    z-index: 3;
+  }
+  .nav .catalog-logo {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 13px 0 0 14.55px;
+    margin: 0 0 20px 0;
+  }
+  .nav .catalog-logo .catalog-close {
+    margin: 0 16.32px 0 0;
+  }
+  .nav .catalog .line1 {
+    width: 98%;
+  }
+  .nav .catalog .zakaz-label,
+  .nav .catalog .docum-label,
+  .nav .catalog .study-label,
+  .nav .catalog .market-label,
+  .nav .catalog .info-label,
+  .nav .catalog .profil-label {
+    width: 80%;
+  }
+  .nav .catalog .zakaz-label .total,
+  .nav .catalog .docum-label .total,
+  .nav .catalog .study-label .total,
+  .nav .catalog .market-label .total,
+  .nav .catalog .info-label .total,
+  .nav .catalog .profil-label .total {
+    right: 325px;
+    top: -5px;
+  }
+  .nav .catalog .list-item-link output {
+    left: 90px;
+  }
+  .container .header {
     display: block;
     width: 34.21%;
     border: none;
@@ -449,10 +687,10 @@ footer {
     top: 0px;
     right: 0;
   }
-  .header .form {
+  .container .header .form {
     display: none;
   }
-  .main {
+  .container .main {
     width: 100%;
   }
 }
