--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,60 +1,257 @@
 @import '_needs.scss';
 
-body{
+body {
     width: 100%;
     height: 100%;
     position: relative;
     display: flex;
 }
 
-*{
+* {
     padding: 0;
     margin: 0;
 }
 
 @import '_left-menu.scss';
-@import '_header.scss';
 
-footer{
+.container{
     width: 100%;
+    @import '_header.scss';
+    .main{
+        @import '_bread-crumbs.scss';
+    }
 }
 
-@media (min-width: 1901px){
-    body{
+@media (min-width: 1901px) {
+    body {
         width: 1900px;
         margin: 0 auto;
     }
 }
 
-@media (max-width: 950px){
+@media (max-width: 965px) {
+    .container{
         .header{
+            padding: 0 3%;
+            margin-left: auto;
+            margin-right: auto;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            .form{
+                order: 1;
+            }
+
+            .social{
+                order: 2;
+            }
+
             .text{
-                display: none;
+                width: 296px;
+                order: 3;
+                margin-top: 10px;
+                margin-bottom: 7px;
             }
         }
+    }
 }
 
-@media (max-width: 768px){
+@media (max-width: 785px){
+    .container{
         .header{
             .form{
                 .search{
-                    .select{
-                        width: 20.4%
+                    width: 407px;
+                    .input{
+                        #search{
+                            width: 200px;
+                        }
                     }
-                    
                 }
+            }
+        }
+    }
+}
+
+@media (max-width: 768px) {
+    .header {
+        .form {
+            .search {
+                .select {
+                    width: 20.4%
+                }
+
+            }
+        }
+    }
+}
+
+@media (max-width: 715px){
+    .container{
+        .header{
+            .form{
+                .search{
+                    width: 357px;
+                    .input{
+                        #search{
+                            width: 150px;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 655px){
+    .container{
+        .header{
+            .form{
+                .search{
+                    width: 307px;
+                    .select{
+                        width: 137px;
+                    }
+
+                    .input{
+                        #search{
+                            width: 120px;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 600px){
+        body {
+            overflow-x: hidden;
+            flex-wrap: wrap;
+        }
+    
+        .nav {
+            width: 132px;
+            min-height: 55px;
+            background-color: white;
+            display: flex;
+            align-items: center;
+            padding: 0 75% 0 15px;
+            border-bottom: 1px solid rgba(77, 77, 77, .2);
+    
+    
+            .catalog-open {
+                display: block;
+                margin: 0 16px 0 0;
+            }
+    
+            .logo {
+                padding: 0;
+                margin: 0 auto;
+    
+                &-mob-img {
+                    display: block;
+                    margin: 0 0 3px 0;
+                }
+    
+                &-img {
+                    display: none;
+                }
+    
+                &-text {
+                    font-size: 5.6px;
+                }
+            }
+    
+            #catalog:checked~.catalog {
+                display: block;
+                position: absolute;
+                left: 0;
+            }
+    
+            .catalog {
+                display: none;
+                position: static;
+                top: 0;
+                left: -999999%;
+                background-color: #f5f5f5;
+                width: 100%;
+                min-height: 100vh;
+                z-index: 3;
+    
+                &-logo {
+                    display: flex;
+                    align-items: center;
+                    padding: 13px 0 0 14.55px;
+                    margin: 0 0 20px 0;
+    
+                    .catalog-close {
+                        margin: 0 16.32px 0 0;
+                    }
+                }
+    
+                .line1 {
+                    width: 98%;
+                }
+    
+    
+                .zakaz-label,
+                .docum-label,
+                .study-label,
+                .market-label,
+                .info-label,
+                .profil-label {
+                    width: 95%;
+    
+                    .total {
+                        right: 325px;
+                        top: -5px;
+                    }
+                }
+    
+                .list {
+                    &-item {
+                        &-link {
+                            output {
+                                left: 90px;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    
+        .container{
+            .header {
+                display: block;
+                width: 20%;
+                border: none;
+                position: absolute;
+                top: 0px;
+                right: 0;
+        
+                .form {
+                    display: none;
+                }
+
+                .text{
+                    display: none;
+                }
+            }
+        
+            .main {
+                width: 100%;
             }
         }
 }
 
 //Telephone
-@media (max-width: 425px){
-    body{
+@media (max-width: 425px) {
+    body {
         overflow-x: hidden;
         flex-wrap: wrap;
     }
 
-    .nav{
+    .nav {
         width: 132px;
         min-height: 55px;
         background-color: white;
@@ -62,38 +259,38 @@ footer{
         align-items: center;
         padding: 0 64% 0 15px;
         border-bottom: 1px solid rgba(77, 77, 77, .2);
-        
 
-        .catalog-open{
+
+        .catalog-open {
             display: block;
             margin: 0 16px 0 0;
         }
 
-        .logo{
+        .logo {
             padding: 0;
-            margin: 0;
+            margin: 0 auto;
 
-            &-mob-img{
+            &-mob-img {
                 display: block;
                 margin: 0 0 3px 0;
             }
 
-            &-img{
+            &-img {
                 display: none;
             }
 
-            &-text{
+            &-text {
                 font-size: 5.6px;
             }
         }
 
-        #catalog:checked ~ .catalog{
+        #catalog:checked~.catalog {
             display: block;
             position: absolute;
             left: 0;
         }
 
-        .catalog{
+        .catalog {
             display: none;
             position: static;
             top: 0;
@@ -103,34 +300,40 @@ footer{
             min-height: 100vh;
             z-index: 3;
 
-            &-logo{
+            &-logo {
                 display: flex;
                 align-items: center;
                 padding: 13px 0 0 14.55px;
                 margin: 0 0 20px 0;
 
-                .catalog-close{
+                .catalog-close {
                     margin: 0 16.32px 0 0;
                 }
             }
 
-            .line1{
+            .line1 {
                 width: 98%;
             }
 
-            
-            .zakaz-label, .docum-label, .study-label, .market-label, .info-label, .profil-label{
+
+            .zakaz-label,
+            .docum-label,
+            .study-label,
+            .market-label,
+            .info-label,
+            .profil-label {
                 width: 80%;
-                .total{
+
+                .total {
                     right: 325px;
                     top: -5px;
                 }
             }
 
-            .list{
-                &-item{
-                    &-link{
-                        output{
+            .list {
+                &-item {
+                    &-link {
+                        output {
                             left: 90px;
                         }
                     }
@@ -138,19 +341,23 @@ footer{
             }
         }
     }
-        .header{
+
+    .container{
+        .header {
             display: block;
             width: 34.21%;
             border: none;
             position: absolute;
             top: 0px;
             right: 0;
-            .form{
+    
+            .form {
                 display: none;
             }
         }
-
-        .main{
+    
+        .main {
             width: 100%;
         }
+    }
 }
