--- a/scss/style.scss
+++ b/scss/style.scss
@@ -222,7 +222,7 @@ body {
         .container{
             .header {
                 display: block;
-                width: 20%;
+                width: 123px;
                 border: none;
                 position: absolute;
                 top: 0px;
@@ -243,27 +243,55 @@ body {
         }
 }
 
+@media(max-width: 470px){
+    .nav{
+        padding-right: 68%;
+    }
+}
+
 //Telephone
 @media (max-width: 425px) {
     .nav {
         padding: 0 64% 0 15px;
         .catalog {
-
-
             .zakaz-label,
             .docum-label,
             .study-label,
             .market-label,
             .info-label,
             .profil-label {
-                width: 80%;
+                width: 95%;
             }
         }
     }
 
     .container{
         .header {
-            width: 34.21%;
+            width: 123px;
         }
+    }
+}
+
+@media (max-width: 390px){
+    .nav{
+        padding-right: 62%;
+    }
+}
+
+@media (max-width: 375px){
+    .nav{
+        padding-right: 60%;
+    }
+}
+
+@media(max-width: 350px){
+    .nav{
+        padding-right: 57%;
+    }
+}
+
+@media (max-width: 325px){
+    .nav{
+        padding-right: 54%;
     }
 }
