--- a/scss/_needs.scss
+++ b/scss/_needs.scss
@@ -12,5 +12,8 @@ $C400: Circe-Regular;
 $C800: Circe-Bold;
 //color
 $grey: #808080;
+$green: #4AAE65;
+$blue: #437EB6;
 $c1: #4d4d4d;
 $c2: #E0101B;
+$c3: #C4C4C4;
